[package]
name = "bdk_persistence"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Persistence traits for BDK"
repository = "https://github.com/bitcoindevkit/bdk"

[dependencies]
bdk_chain = { path = "../chain", version = "0.21.1", features = ["miniscript", "serde"] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
bitcoin = { version = "0.30.0" } 