[package]
name = "example_wallet_redb"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
bdk_wallet = "1.2.0"
bdk_redb = { path = "../../crates/bdk_redb" }
bdk_chain = { path = "../../crates/chain", features = ["miniscript", "serde"] }
bdk_persistence = { path = "../../crates/bdk_persistence" }
bdk_esplora = { version = "0.20", features = ["blocking"] }
bitcoin = "0.32.4"
anyhow = "1"